--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./style.css">
+  </head>
+  <body>
+    <form id="work-form" action="#">
+      <label for="inputWork">Nhập công việc</label>
+      <input
+        type="text"
+        id="inputWork"
+        name="inputWork"
+        placeholder="Nhập công việc"
+        required
+      />
+    </form>
+    <button id="button-submit">Thêm</button>
+    <table id="table-form">
+        <thead>
+            <tr>
+                <th>Công việc</th>
+                <th>Thao tác</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+    <script src="./script.js"></script>
+  </body>
 </html>
